# yolomech

./: CMakeLists.txt  shoot_template.cpp  template_alignment.cpp  template_alignment.h
python/: cpt_dtc_convert.py  yolomech.py
